# bevy-core-flake

./: Cargo.toml  README.md  flake.nix
nix/: raylib.nix
src/: main.rs
