[package]
name = "bevy_and_raylib_core_flake"
version = "0.1.0"
edition = "2024"


[profile.dev.package.'*']
opt-level = 3


[dependencies]
bevy = { version = "0.16"}
rand = "0.9.2"


[target.'cfg(target_os = "macos")'.dependencies]
raylib = { version = "5.5.1" }


[target.'cfg(target_os = "linux")'.dependencies]
raylib = { version = "5.5.1", features = ["wayland","x11"] }
